<resources>
    <string name="app_name">WeatherAppGeekBrains</string>
    <string name="title_weather">Moscow</string>
    <string name="text_status_weather">Advantage sunny</string>
    <string name="text_temperature">15 °C</string>
    <string name="text_precipitation">Chance of precipitation: 0%</string>
    <string name="humidity">Humidity: 40%</string>
    <string name="text_wind">Wind: 3 м/с</string>
    <string name="text_day_time_now">Tuesday 08:00</string>
    <string name="show_chance_of_precipitation">Show chance of precipitation</string>
    <string name="show_humidity">Show humidity</string>
    <string name="show_wind">Show wind</string>
    <string name="shr_hint_password">Enter text</string>
    <string name="btn_search">Search</string>
    <string name="inputCity">"Input city"</string>
    <string name="title_btn_open_in_internet">More information</string>
    <string name="title_btn_set_text">Set</string>
    <string name="text_toast">Enter a city to view the weather!</string>
    <string name="show_in_internet">show in internet</string>
    <string name="title_select_city">Selected city</string>
    <string name="title_dialog_error">Error!</string>
    <string name="text_dialog_error">Current city not found!</string>
    <string name="title_ic_weather">Weather</string>
    <string name="title_ic_history_weather">History weather</string>
    <string name="title_about_me">About Dev</string>
    <string name="title_settings">Settings</string>
    <string name="title_text_setTheme">Set night theme</string>
    <string name="name_profession">Android developer</string>
    <string name="developer_full_name">Popov Ivan</string>
    <string name="title_feel_like">Feels like</string>
    <string name="title_min_temp">Min temp</string>
    <string name="title_max_temp">Max temp</string>
    <string name="title_pressure">Pressure</string>
    <string name="title_humidity">Humidity</string>
    <string name="title_speed_wind">Wind speed</string>
    <string name="title_sunrise">Sunrise</string>
    <string name="title_sunset">Sunset</string>
    <string name="title_visibility">Visibility</string>
    <string name="wind_values">м/с</string>
    <string name="humidity_values">%</string>
    <string name="temperature_values">°C</string>
    <string name="visible_values">км</string>
    <string name="pressure_values">мм.рт.ст.</string>
    <string name="monday">Monday</string>
    <string name="tuesday">Tuesday</string>
    <string name="wednesday">Wednesday</string>
    <string name="thursday">Thursday</string>
    <string name="friday">Friday</string>
    <string name="saturday">Saturday</string>
    <string name="sunday">Sunday</string>
    <string name="sub_title_menu_main">Main</string>
    <string name="sub_title_menu_other">Other</string>
    <string name="title_weather_in">Weather in city</string>
    <string name="remove">Delete</string>
    <string name="input_city">Input city</string>
    <string name="text_cancel">Cancel</string>
    <string name="title_alert_dialog">Add city</string>
    <string name="text_add">Add</string>
    <string name="ok">OK</string>
    <string name="about_app">about app</string>
    <string name="title_about_app">About app</string>
    <string name="text_about_app">The application is slowly being finalized and will soon be more or less real :)
        \nVersion 1.0</string>
    <string name="title_list_cities">Список городов</string>
    <string name="title_history">History</string>
    <string name="send_push_notify">Отправить пуш уведомление</string>
    <string name="not_internet_connection">Not internet connection!</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="my_channel">my_channel</string>
    <string name="my_channel_firebase">my_channel_firebase</string>
    <string name="find_out_the_weather">Find out the weather</string>
    <string name="geolocation_not_found">Not found location!</string>
</resources>
