<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item android:title="@string/sub_title_menu_main">
        <menu>
            <group android:checkableBehavior="single">
                <item
                    android:id="@+id/nav_weather"
                    android:icon="@drawable/ic_wb_sunny_black_24dp"
                    android:title="@string/title_ic_weather" />
                <item
                    android:id="@+id/nav_history_weather"
                    android:icon="@drawable/ic_history_black_24dp"
                    android:title="@string/title_ic_history_weather" />
                <item
                    android:id="@+id/nav_find_out_the_weather"
                    android:icon="@drawable/ic_baseline_location_on_24"
                    android:title="@string/find_out_the_weather" />
            </group>
        </menu>
    </item>

    <item android:title="@string/sub_title_menu_other">
        <menu>
            <group android:checkableBehavior="single">
                <item
                    android:id="@+id/nav_send_push_notify"
                    android:icon="@drawable/ic_notifications_black_24dp"
                    android:title="@string/send_push_notify" />
                <item
                    android:id="@+id/nav_about_dev"
                    android:icon="@drawable/ic_person_black_24dp"
                    android:title="@string/title_about_me" />
                <item
                    android:id="@+id/nav_settings"
                    android:icon="@drawable/ic_settings_black_24dp"
                    android:title="@string/title_settings" />
            </group>
        </menu>
    </item>
</menu>
