<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#21252D">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:context=".ui.activities.MainActivity">

        <TextView
            android:id="@+id/titleWeather"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:gravity="center"
            android:text="@string/title_weather"
            android:textColor="@android:color/white"
            android:textSize="@dimen/size_title_weather"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/imageCity"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginTop="28dp"
            android:src="@drawable/taganrog"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/titleWeather"
            app:srcCompat="@drawable/krasnodar" />

        <ImageView
            android:id="@+id/imageWeather"
            android:layout_width="173dp"
            android:layout_height="166dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="20dp"
            android:src="@drawable/ic_image_weather"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/imageCity"
            app:layout_constraintTop_toBottomOf="@+id/imageCity" />

        <TextView
            android:id="@+id/textDayTimeNow"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/text_day_time_now"
            android:textColor="@android:color/white"
            android:textSize="20sp"
            app:layout_constraintEnd_toEndOf="@+id/textTemperature"
            app:layout_constraintStart_toStartOf="@+id/textTemperature"
            app:layout_constraintTop_toBottomOf="@+id/textTemperature" />

        <TextView
            android:id="@+id/textStatusWeather"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="40dp"
            android:text="@string/text_status_weather"
            android:textColor="@android:color/white"
            app:layout_constraintBottom_toBottomOf="@+id/imageCity"
            app:layout_constraintEnd_toEndOf="@+id/textDayTimeNow"
            app:layout_constraintStart_toStartOf="@+id/textDayTimeNow"
            app:layout_constraintTop_toBottomOf="@+id/textDayTimeNow"
            app:layout_constraintVertical_bias="0.13" />

        <TextView
            android:id="@+id/textTemperature"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="20dp"
            android:gravity="center"
            android:text="@string/text_temperature"
            android:textColor="@android:color/holo_green_dark"
            android:textSize="60sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/imageCity"
            app:layout_constraintTop_toTopOf="@+id/imageCity" />

        <TextView
            android:id="@+id/textPrecipitation"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="40dp"
            android:layout_marginEnd="10dp"
            android:text="@string/text_precipitation"
            android:textColor="@android:color/white"
            android:visibility="visible"
            app:layout_constraintEnd_toStartOf="@+id/imageWeather"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/imageWeather" />

        <TextView
            android:id="@+id/textHumidity"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="10dp"
            android:text="@string/humidity"
            android:textColor="@android:color/white"
            android:visibility="visible"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textPrecipitation" />

        <TextView
            android:id="@+id/textWind"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="10dp"
            android:text="@string/text_wind"
            android:textColor="@android:color/white"
            android:visibility="visible"
            app:layout_constraintBottom_toBottomOf="@+id/imageWeather"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textHumidity"
            app:layout_constraintVertical_bias="0.0" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="20dp"
            android:orientation="vertical"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/imageWeather"
            app:layout_constraintVertical_bias="1.0">

            <CheckBox
                android:id="@+id/showPrecipitation"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:checked="true"
                android:text="@string/show_chance_of_precipitation"
                android:textColor="@android:color/white" />

            <CheckBox
                android:id="@+id/showHumidity"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:checked="true"
                android:text="@string/show_humidity"
                android:textColor="@android:color/white" />

            <CheckBox
                android:id="@+id/showWind"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:checked="true"
                android:text="@string/show_wind"
                android:textColor="@android:color/white" />

            <com.google.android.material.button.MaterialButton
                android:layout_marginTop="15dp"
                android:id="@+id/btnMoreInfo"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:text="@string/title_btn_open_in_internet" />

        </LinearLayout>


    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>